--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -18,7 +18,7 @@
             style="@style/title_text"
             android:layout_marginStart="17dp"
             android:layout_marginTop="54dp"
-            android:text="@string/title_main"
+            android:text="@string/brew_with_lex"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,17 +34,18 @@
         android:id="@+id/coffee_extras_scrollview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:paddingHorizontal="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="16dp"
         app:layout_constraintBottom_toTopOf="@id/brew_coffee"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/header">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/coffee_extras"
+            android:background="@drawable/option_shape"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="16dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="16dp"/>
+            android:layout_height="wrap_content" />
 
     </ScrollView>
 
