--- a/app/src/main/res/layout/activity_select_your_extras.xml
+++ b/app/src/main/res/layout/activity_select_your_extras.xml
@@ -18,7 +18,7 @@
             style="@style/title_text"
             android:layout_marginStart="17dp"
             android:layout_marginTop="54dp"
-            android:text="@string/title_main"
+            android:text="@string/brew_with_lex"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
